force-app/main/default/objects/Package_Data__c/Package_Data__c.object-meta.xml
<CustomObject>
    <label>Package Data</label>
    <nameField>
        <label>Package Specification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>