force-app/main/default/objects/Package_Data__c/fields/Package_Specification_Name__c.field-meta.xml
<CustomField>
    <fullName>Package_Specification_Name__c</fullName>
    <label>Package Specification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>