force-app/main/default/objects/Package_Data__c/fields/Packing_Form__c.field-meta.xml
<CustomField>
    <fullName>Packing_Form__c</fullName>
    <label>Packing Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>