force-app/main/default/objects/Package_Data__c/fields/Pakcing_Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Pakcing_Size_Code__c</fullName>
    <externalId>true</externalId>
    <label>Package Specification Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>