force-app/main/default/objects/Package_Data__c/fields/Weight_Of_Goods_Per_Packing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Of_Goods_Per_Packing_Unit__c</fullName>
    <label>Weight Of Goods Per Packing Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>