force-app/main/default/objects/Package_Data__c/fields/Weight_Per_Unit_Of_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Weight_Per_Unit_Of_Packaging__c</fullName>
    <label>Weight Per Unit Of Packaging</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>