force-app/main/default/objects/Package_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Packing_Form__c</columns>
    <columns>Pakcing_Size_Code__c</columns>
    <columns>Weight_Of_Goods_Per_Packing_Unit__c</columns>
    <columns>Weight_Per_Unit_Of_Packaging__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>